tests/paczka1/small_fuzzy/41046057.err
Error in line 2: S950 S303 63,6
Error in line 5: 5mH S303 33,2
Error in line 12: S950 S303 -3,4
Error in line 7: S950 S303 85,5
